--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -26,8 +26,10 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: frontend
+    app: myapp
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
-      nodePort: 30081
+      nodePort: 30082   # use a different port
+
